[package]
name = "chiron"
version = "0.0.4"
authors = ["Claire V. Hammond <me@cvhammond.com>"]
edition = "2021"
categories = ["science", "simulation", "game-development", "science::robotics"]
description = "Graphical and command-line interface tools for Biomechanics Foundation"
license = "MIT OR Apache-2.0"
homepage = "https://chiron.rs"
repository = "https://github.com/biomechanics-foundation/chiron"
readme = "README.md"
keywords = ["biomechanics", "simulation", "game-development", "physics", "mathematics"]

[dependencies]
c3dio = { path = "../c3dio", version = "0.7.0" }
bevy_c3d = { path = "../bevy_c3d", version = "0.13.0" }

bevy = "0.13"
bevy_egui = "0.25"
egui_dock = "0.11"
egui = "0.26"
egui_plot = "0.26"
egui_extras = "0.26"
uuid = "1.4"
winit = "0.29"
image = "0.25"

grid = "0.10"
clap = "4.4"
log = "0.4"
env_logger = "0.10"
colored = "2"
indicatif = "0.17"
glob = "0.3.1"
rfd = "0.14"

[dev-dependencies]
test-files = "0.1.2"

[[bin]]
name = "c3dio"
path = "src/c3dio/main.rs"

