[package]
name = "chiron"
version = "0.1.0"
authors = ["Claire V. Hammond <me@cvhammond.com>"]
edition = "2021"
categories = ["science", "simulation", "game-development", "science::robotics"]
description = "Graphical and command-line interface tools for Biomechanics Foundation"
license = "MIT OR Apache-2.0"
homepage = "https://chiron.rs"
repository = "https://github.com/biomechanics-foundation/chiron"
readme = "README.md"
keywords = ["biomechanics", "simulation", "game-development", "physics", "mathematics"]
default-run = "chiron"

[dependencies]
c3dio = "0.8.0"
bevy_c3d = "0.13.1"
butterworth = "0.1.0"

bevy = "0.13"
bevy_egui = "0.26"
egui_dock = "0.11"
egui = "0.26"
egui_plot = "0.26"
egui_extras = "0.26"
uuid = "1.4"
winit = "0.29"
image = "0.25"
bevy_mod_outline = "0.7"

argh = "0.1.12"
yansi = "1.0.1"
grid = "0.10"
glob = "0.3.1"
rfd = "0.14"

[dev-dependencies]
test-files = "0.1.2"

[[bin]]
name = "c3dio"
path = "src/c3dio/main.rs"

[[bin]]
name = "chiron"
path = "src/gui/main.rs"
